ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - amodifier.portail.innovation.insee.eu
  rules:
    - host: amodifier.portail.innovation.insee.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: hello
              servicePort: http
